--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
